--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>نظام سندات القبض</title>
   <style>
+    /* --- التنسيقات كما أرسلتها --- */
     body {
       font-family: 'Arial', sans-serif;
       background: #f0f4f8;
@@ -12,7 +13,6 @@
       color: #333;
       margin: 0;
     }
-
     .container {
       background: #fff;
       padding: 20px;
@@ -21,34 +21,17 @@
       max-width: 600px;
       margin: auto;
     }
-
-    h2 {
-      text-align: center;
-      color: #2c3e50;
-      margin-bottom: 20px;
-      font-size: 20px;
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-    }
-
-    label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 14px;
-    }
-
+    h2 { text-align: center; color: #2c3e50; margin-bottom: 20px; font-size: 20px; }
+    .form-group { margin-bottom: 15px; }
+    label { display: block; font-weight: bold; margin-bottom: 6px; font-size: 14px; }
     select, input {
       width: 100%;
       padding: 10px;
-      border: 2px solid #ccc;
+      border: 2px solid #b7b1ff;
       border-radius: 8px;
-      font-size: 14px;
+      font-size: 20px;
       box-sizing: border-box;
     }
-
     button {
       background: #27ae60;
       color: #fff;
@@ -59,63 +42,36 @@
       font-size: 16px;
       cursor: pointer;
     }
-
-    button:hover {
-      background: #219a52;
-    }
-
-    #message {
-      text-align: center;
-      margin-top: 10px;
-      font-weight: bold;
-      min-height: 24px;
-      font-size: 14px;
-    }
-
+    button:hover { background: #219a52; }
+    #message { text-align: center; margin-top: 10px; font-weight: bold; min-height: 24px; font-size: 14px; }
     .success { color: #27ae60; }
     .error { color: #e74c3c; }
     .loading { color: #7f8c8d; }
-
     #todayReceipts {
       margin-top: 25px;
       background: #ecf0f1;
       padding: 15px;
       border-radius: 10px;
     }
-
-    #todayReceipts h3 {
-      margin-top: 0;
-      font-size: 18px;
-    }
-
-    #receiptList {
-      padding-right: 20px;
-      font-size: 14px;
-    }
-
+    #todayReceipts h3 { margin-top: 0; font-size: 18px; }
+    #receiptList { padding-right: 20px; font-size: 14px; }
     .amount-container {
       display: flex;
       align-items: center;
       gap: 10px;
       margin-bottom: 15px;
     }
-
     .amount-box {
-      background-color: #f5f5f5;
+      background-color: #c5c6ff;
       padding: 10px 20px;
       border-radius: 8px;
       font-weight: bold;
-      color: #2c3e50;
-      font-size: 15px;
+      color: #290d0d;
+      font-size: 24px;
       flex-grow: 1;
       text-align: center;
     }
-
-    #amountSelect {
-      width: 150px;
-      padding: 8px;
-      font-size: 14px;
-    }
+    #amountSelect { width: 150px; padding: 8px; font-size: 14px; }
   </style>
 </head>
 <body>
@@ -159,9 +115,15 @@
     <button onclick="validateAndSubmit()">تسجيل السند</button>
     <div id="message"></div>
 
+    <div id="todayReceipts">
+      <h3>سندات الاسبوع:</h3>
+      <ul id="receiptList"></ul>
+      <p><strong>مجموع الاسبوع دولار: $<span id="totalUSD">0</span></strong></p>
+    </div>
+  </div>
 
   <script>
-    const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx1j_qC35ezm4VRJG-7pcteMP85BwEvvvQv65Qb9f4Mpq7c2w0-fabmAikN79XiDz1x/exec';
+    const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzU7XtTieDcGSyK7GbwP27ijbIu_unClrR6p8xGIjj38G_kOCnsvXzM5AK404q-3KWu/exec';
     const EXTERNAL_SHEET_URL = 'https://script.google.com/macros/s/AKfycbwe3LNxv03ZGn9Cj3mr7iq4facjiR2AD4iy_vNNQWgZQ1sgSMSBkPGYJOtw-M0zPgw_ug/exec';
 
     const daysArabic = ['الأحد', 'الإثنين', 'الثلاثاء', 'الأربعاء', 'الخميس', 'الجمعة', 'السبت'];
@@ -201,7 +163,7 @@
         });
         document.getElementById('totalUSD').textContent = total.toLocaleString('en-US', { maximumFractionDigits: 0 });
       } catch (error) {
-        showMessage('    ', 'error');
+        showMessage('فشل في تحميل سندات اليوم', 'error');
       }
     }
 
@@ -247,7 +209,7 @@
           body: JSON.stringify(formData),
           mode: 'no-cors',
         });
-        showMessage('تم الإرسال بنجاح', 'success');
+        showMessage('تم ارسال السند بنجاح', 'success');
         resetForm();
         loadTodayReceipts();
       } catch (error) {
